--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ flake8 = "^5"
 pytest-django = "^4"
 boto3 = "^1.26"
 factory-boy = "^3.2"
-djangorestframework = "^3.14"
+pydantic = "^1.10"
 
 
 [build-system]
